reworked navbar, spacing fixes on bottom header and

--- a/css/index.css
+++ b/css/index.css
@@ -72,8 +72,9 @@ p {
 }
 .navbar {
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-evenly;
-    
+    margin: 0 auto;
 }
 
 header {
@@ -142,6 +143,7 @@ header div a {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
+    margin-top: 50px;
     border-bottom: 1px dashed black;
 }
 
@@ -190,6 +192,12 @@ header div a {
 
 .bottom-content .text-container:last-child {
     padding-right: 0;
+}
+.bottomheader h2 {
+    margin-top: 20px;
+}
+.bottomheader p {
+    margin-bottom: 20px;
 }
 
 footer {
